Figured out what the hell I'm doing

--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html>
 	<head>
 		<title>illdie's room of suffering</title>
-		<link rel="stylesheet" href="general.css">
+		<link rel="stylesheet" href="header.css">
 	</head>
 	
 	<body>
-		<img class="myImage" id="myImage" src="pngs/cover.png">
-		
-		<div class="selectButtons">
-			<button id="last" >Last</button>
-			<button id="next" >Next</button>
-		</div>
+		<header>
+			<div><a href="index.html"><img class="cover" src="cover.png"></a></div>
+			
+			<div><a href="bsm0.html"><img class="masterpage" src="bsm.png"></a></div>
+		</header>
 	</body>
 	
-	<script src="pageviewer.js"></script>
 </html>
