--- a/bsm1.html
+++ b/bsm1.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>illdie's room of suffering</title>
-		<link rel="stylesheet" href="header.css">
-		<link rel="stylesheet" href="pageviewer.css">
-	</head>
-	
-	<body>
-		<header>
-			<div><a href="index.html"><img class="cover" src="cover.png"></a></div>
-		</header>
-		<main>
-		
-			<a name='page'></a>
-			<div id="page" class="selectButtons">
-				<a href="bsm0.html#page"><img class="mbut" src="pngs/left.png"></a>
-				<a href="bsm2.html#page"><img class="mbut" src="pngs/right.png"></a>
-			</div>
-		
-			<a href="bsm2.html#page"><img class="myImage" id="myImage" src="pngs/page1.png"></a>
-			
-		</main>
-	</body>
-	
-</html>
+<!DOCTYPE html><html><head><title>illdie's room of suffering</title><link rel='stylesheet' href='header.css'><link rel='stylesheet' href='pageviewer.css'></head><body><header><div><a href='index.html'><img class='cover' src='cover.png'></a></div></header><main><a name='page'></a><div class='selectButtons'><a href='bsm0.html#page'><img class='mbut' src='pngs/left.png'></a><a href='bsm2.html#page'><img class='mbut' src='pngs/right.png'></a></div><a href='bsm2.html#page'><img class='myImage' id='myImage' src='pngs/page1.png'></a></main></body><script>document.onkeydown = function(e) {switch (e.keyCode) {case 37:window.location.href = 'bsm0.html#page';break;case 39:window.location.href = 'bsm2.html#page';break;}};</script></html>
