Updated Pages and Made Buttons Transparent
Added p13 and p14

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>illdie's room of suffering</title>
+		<title>illdie</title>
 		<link rel="stylesheet" href="header.css">
 	</head>
 	
