--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<header>
 			<div><a href="index.html"><img class="cover" src="cover.png"></a></div>
 			
-			<div><a href="bsm0.html"><img class="masterpage" src="bsm.png"></a></div>
+			<div>
+			<a href="bsm0.html"><img class="masterpage" src="bsm.png"></a>
+			<a href="remy1.html"><img class="masterpage" src="remy.png"></a>
+			</div>
 		</header>
 	</body>
 	
