Improved file management

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<div><a href="index.html"><img class="cover" src="cover.png"></a></div>
 			
 			<div>
-			<a href="bsm0.html"><img class="masterpage" src="bsm.png"></a>
-			<a href="remy1.html"><img class="masterpage" src="remy.png"></a>
+			<a href="bsmpages/bsm0.html"><img class="masterpage" src="bsm.png"></a>
+			<a href="remypages/remy1.html"><img class="masterpage" src="remy.png"></a>
 			</div>
 		</header>
 	</body>
