Extra file management and new links

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 			<a href="bsmpages/bsm0.html"><img class="masterpage" src="bsm.png"></a>
 			<a href="remypages/remy1.html"><img class="masterpage" src="remy.png"></a>
 			</div>
+			
+			<div>
+			<a href="https://twitter.com/illdie314"><img class="masterpage" src="twitter.png"></a>
+			<a href="https://illdie.itch.io/"><img class="masterpage" src="itch.png"></a>
+			<a href="https://www.youtube.com/user/illdiewithoutpi"><img class="masterpage" src="youtube.png"></a>
+			</div>
+			
 		</header>
 	</body>
 	
