--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 			<div>
 			<a href="bsmpages/bsm0.html"><img class="masterpage" src="bsm.png"></a>
 			<a href="remypages/remy1.html"><img class="masterpage" src="remy.png"></a>
+			<a href="toirepages/toire0.html"><img class="masterpage" src="toire.png"></a>
 			</div>
 			
 			<div>
 			<a href="https://twitter.com/illdie314"><img class="masterpage" src="twitter.png"></a>
 			<a href="https://illdie.itch.io/"><img class="masterpage" src="itch.png"></a>
 			<a href="https://www.youtube.com/user/illdiewithoutpi"><img class="masterpage" src="youtube.png"></a>
+			<a href="https://www.instagram.com/illdie314/"><img class="masterpage" src="ig.png"></a>
+			
 			</div>
 			
 		</header>
